gitops/instances/rhaii/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhaii-vllm
  namespace: rhaiis
  labels:
    app: rhaii-vllm
spec:
  to:
    kind: Service
    name: rhaii-vllm
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
